<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_feedback"
        android:title="@string/menu_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy"
        android:title="@string/menu_privacy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_terms"
        android:title="@string/menu_terms"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_theme"
        android:title="@string/menu_theme"
        app:showAsAction="never" />
</menu>